# smol-sticker-app

./: .gitignore  CODEOWNERS  Dockerfile  README.md  config.json.example  nginx.conf  pyproject.toml
packs/: pack.json
sticker_picker/: __init__.py
web/: package-lock.json
