[tool.poetry]
name = "sticker-picker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.6"
yarl = "^1.9.2"
pillow = "^10.1.0"
telethon = "^1.32.0"
cryptg = "^0.4.0"
python-magic = "^0.4.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."sticker-picker.application.plugin"]
"sticker-pack" = "sticker_picker:cmd"

[tool.poetry.scripts]
sticker-pack = "sticker_picker:cmd"
