[tool.poetry]
name = "sticker-picker"
version = "0.1.1"
description = ""
authors = ["Max <emax@cloudydev.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8"
yarl = "^1.9"
pillow = "^11.0.0"
telethon = "^1.32"
cryptg = "^0.4"
python-magic = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."sticker-picker.application.plugin"]
"sticker-pack" = "sticker_picker:cmd"

[tool.poetry.scripts]
sticker-pack = "sticker_picker:cmd"
